PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Notice__c/Interface_Service_Notice__c.object-meta.xml
<CustomObject>
    <description>인터페이스 알림메시지 이력</description>
    <label>Interface Service Notice</label>
    <nameField>
        <label>Interface Service Notice Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>