PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Notice__c/fields/Contents__c.field-meta.xml
<CustomField>
    <fullName>Contents__c</fullName>
    <description>메일 본문</description>
    <inlineHelpText>메일 본문</inlineHelpText>
    <label>Contents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>