PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Notice__c/fields/Email_Send_Yn__c.field-meta.xml
<CustomField>
    <fullName>Email_Send_Yn__c</fullName>
    <label>이메일 발송여부</label>
    <length>100</length>
    <type>Text</type>
</CustomField>