PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Notice__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>에러 메시지</description>
    <inlineHelpText>에러 메시지</inlineHelpText>
    <label>Error_Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>