PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Notice__c/fields/Reciever__c.field-meta.xml
<CustomField>
    <fullName>Reciever__c</fullName>
    <description>수신자</description>
    <inlineHelpText>수신자</inlineHelpText>
    <label>Reciever</label>
    <length>255</length>
    <type>Text</type>
</CustomField>