PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Notice__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <description>발송자</description>
    <inlineHelpText>발송자</inlineHelpText>
    <label>Sender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>