PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Notice__c/fields/Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Name__c</fullName>
    <description>발송자명</description>
    <inlineHelpText>발송자명</inlineHelpText>
    <label>Sender_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>