PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Notice__c/fields/seq__c.field-meta.xml
<CustomField>
    <fullName>seq__c</fullName>
    <description>일련번호</description>
    <inlineHelpText>일련번호</inlineHelpText>
    <label>seq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>