PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Notice__c/fields/Service_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Id__c</fullName>
    <description>서비스 아이디</description>
    <inlineHelpText>서비스 아이디</inlineHelpText>
    <label>Service Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>