PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Notice__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <label>Service_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>