PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Notice__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>메일 제목</description>
    <inlineHelpText>메일 제목</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>