PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Notice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Id__c</columns>
    <columns>Service_Name__c</columns>
    <columns>Subject__c</columns>
    <columns>Email_Send_Yn__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>